configuring files under 'examples/' directory structure.

--- a/examples/Supervised Learning/Decision Trees/decision_tree.ipynb
+++ b/examples/Supervised Learning/Decision Trees/decision_tree.ipynb
@@ -86,9 +86,8 @@
     "\n",
     "**Structure of a simple decision tree:**\n",
     "\n",
-    "![Decision Tree Example](https://upload.wikimedia.org/wikipedia/commons/f/f7/CART_tree_titanic_survivors.png)\n",
+    "![Decision Tree Example](https://cdn-images-1.medium.com/max/824/0*J2l5dvJ2jqRwGDfG.png)\n",
     "\n",
-    "This example shows how the Titanic dataset can be split based on features like \"Sex\" and \"Age\" to predict survival.\n",
     "\n",
     "---\n",
     "\n",
@@ -526,6 +525,13 @@
    "metadata": {},
    "source": [
     "The performance is still good, just with two splits!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparison to Sklearn Package"
    ]
   },
   {
