--- a/examples/Unsupervised Learning/K-means/k_mean_from_scratch.ipynb
+++ b/examples/Unsupervised Learning/K-means/k_mean_from_scratch.ipynb
@@ -110,7 +110,23 @@
    "source": [
     "# Application: Clustering Wines\n",
     "- Dataset comprises many different types of wine that have unqiue characteristics.\n",
-    "- We are interested in clustering these; perhaps, this could be helpful in determining prices or suggesting wines to people that are similar to others they have liked, etc."
+    "- We are interested in clustering these; perhaps, this could be helpful in determining prices or suggesting wines to people that are similar to others they have liked, etc.\n",
+    "\n",
+    "| **Feature**              | **Description**                                            |\n",
+    "| ------------------------ | ---------------------------------------------------------- |\n",
+    "| **Alcohol**              | Alcohol content of the wine.                               |\n",
+    "| **Malic_Acid**           | Amount of malic acid.                                      |\n",
+    "| **Ash**                  | Ash content.                                               |\n",
+    "| **Ash_Alcanity**         | Ash alkalinity.                                            |\n",
+    "| **Magnesium**            | Magnesium content.                                         |\n",
+    "| **Total_Phenols**        | Total phenolic compounds.                                  |\n",
+    "| **Flavanoids**           | Flavanoid content.                                         |\n",
+    "| **Nonflavanoid_Phenols** | Non-flavonoid phenols.                                     |\n",
+    "| **Proanthocyanins**      | Proanthocyanin content.                                    |\n",
+    "| **Color_Intensity**      | Intensity of wine color.                                   |\n",
+    "| **Hue**                  | Hue of the wine.                                           |\n",
+    "| **OD280**                | Optical density at 280 nm (related to phenolic compounds). |\n",
+    "| **Proline**              | Proline amino acid content.                                |\n"
    ]
   },
   {
