--- a/examples/Unsupervised Learning/DBSCAN/dbscan.ipynb
+++ b/examples/Unsupervised Learning/DBSCAN/dbscan.ipynb
@@ -127,8 +127,9 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.datasets import make_moons, make_blobs\n",
     "# did not make it into mlpackage\n",
-    "from sklearn.cluster import DBSCAN, KMeans\n",
+    "from sklearn.cluster import KMeans\n",
     "from mlpackage.preprocess import StandardScaler\n",
+    "from mlpackage import DBSCAN\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "# Nonlinear \"moons\" dataset\n",
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "dl_env",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
