--- a/examples/Supervised Learning/Ensembles/ensembles_from_scratch.ipynb
+++ b/examples/Supervised Learning/Ensembles/ensembles_from_scratch.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,11 +343,11 @@
     "\n",
     "# my package imports\n",
     "from mlpackage.preprocess import train_test_split\n",
-    "from mlpackage import RandomForest, DecisionTree\n",
+    "from mlpackage import RandomForestClassifier, DecisionTreeClassifier\n",
     "from mlpackage.metrics import accuracy_score, classification_report\n",
     "\n",
     "# import ensemble models for comparison\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier as RFClassifier, GradientBoostingClassifier\n",
     "#from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "# Read in data\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
    "source": [
     "\n",
     "# Create and train the Random Forest model\n",
-    "rf_model = RandomForest(n_estimators=15, max_depth=2, max_features=8)\n",
+    "rf_model = RandomForestClassifier(n_estimators=15, max_depth=2, max_features=8)\n",
     "rf_model.fit(X_train.values, y_train.values)\n",
     "\n",
     "# accuracy on training set\n",
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
    ],
    "source": [
     "# Let's compare to Sklearn's Random Forest\n",
-    "sklearn_rf = RandomForestClassifier(n_estimators=15, max_depth=2, max_features=8, random_state=42)\n",
+    "sklearn_rf = RFClassifier(n_estimators=15, max_depth=2, max_features=8, random_state=42)\n",
     "sklearn_rf.fit(X_train, y_train)\n",
     "# accuracy on training set\n",
     "sklearn_train_predictions = sklearn_rf.predict(X_train)\n",
@@ -903,7 +903,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "dl_env",
    "language": "python",
    "name": "python3"
   },
@@ -917,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
